--- a/templates/index.html
+++ b/templates/index.html
@@ -35,8 +35,8 @@
           <p>
             <img src="{{ section.extra.icon}}" height=250> </img>
           </p>
-          <a class="btn btn-primary btn-lg px-4 mb-2" href="{{ get_url(path=section.extra.url | default(value="/")) | safe }}" role="button">{{ section.extra.url_button | default(value="Get started") }}</a>
-          <p class="meta">{{ section.extra.repo_license | default(value="MIT")}} <a href="{{ section.extra.repo_url | default(value="https://github.com/aaranxu/adidoks") | safe }}">{{ section.extra.repo_version | default(value="0.1.0") }}</a></p>
+          <a class="btn btn-primary btn-lg px-4 mb-2" href="{{ get_url(path=section.extra.left_url | default(value="/")) | safe }}" role="button">{{ section.extra.left_url_button | default(value="Get started") }}</a>
+          <a class="btn btn-primary btn-lg px-4 mb-2 ms-4" href="{{ get_url(path=section.extra.right_url | default(value="/")) | safe }}" role="button">{{ section.extra.right_url_button | default(value="Get started") }}</a>
         </div>
       </div>
     </section>
