--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
             <img src="{{ section.extra.icon}}" height=250> </img>
           </p>
           <a class="btn btn-primary btn-lg px-4 mb-2" href="{{ get_url(path=section.extra.left_url | default(value="/")) | safe }}" role="button">{{ section.extra.left_url_button | default(value="Get started") }}</a>
-          <a class="btn btn-primary btn-lg px-4 mb-2 ms-4" href="{{ get_url(path=section.extra.right_url | default(value="/")) | safe }}" role="button">{{ section.extra.right_url_button | default(value="Get started") }}</a>
+          <a class="btn btn-primary btn-lg px-4 mb-2 ms-4" href="{{ section.extra.right_url | safe }}" role="button">{{ section.extra.right_url_button | default(value="Get started") }}</a>
         </div>
       </div>
     </section>
